--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -1,31 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/main_nav_graph"
-            app:startDestination="@id/simulatorFragment">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/main_nav_graph"
+        app:startDestination="@id/simulatorFragment">
 
-    <fragment android:id="@+id/simulatorFragment"
-              android:name="br.com.isgreen.calculatorsimulator.screen.simulator.SimulatorFragment"
-              android:label="fragment_simulator"
-              tools:layout="@layout/fragment_simulator">
+    <fragment
+            android:id="@+id/simulatorFragment"
+            android:name="br.com.isgreen.calculatorsimulator.screen.simulator.SimulatorFragment"
+            android:label="fragment_simulator"
+            tools:layout="@layout/fragment_simulator">
 
-        <action android:id="@+id/action_simulatorFragment_to_resultFragment"
-                app:destination="@id/resultFragment"
-                app:enterAnim="@anim/translate_left_enter"
-                app:exitAnim="@anim/translate_left_exit"
-                app:popEnterAnim="@anim/translate_right_enter"
-                app:popExitAnim="@anim/translate_right_exit"/>
+        <action
+                android:id="@+id/action_simulatorFragment_to_resultFragment"
+                app:destination="@id/resultFragment" />
 
     </fragment>
 
-    <fragment android:id="@+id/resultFragment"
-              android:name="br.com.isgreen.calculatorsimulator.screen.result.ResultFragment"
-              android:label="fragment_result"
-              tools:layout="@layout/fragment_result"/>
+    <fragment
+            android:id="@+id/resultFragment"
+            android:name="br.com.isgreen.calculatorsimulator.screen.result.ResultFragment"
+            android:label="fragment_result"
+            tools:layout="@layout/fragment_result">
 
-    <argument android:name="simulation"
-              app:argType="br.com.isgreen.calculatorsimulator.data.model.Simulation"
-              android:defaultValue="@null"/>
+        <argument
+                android:name="simulation"
+                android:defaultValue="@null"
+                app:argType="br.com.isgreen.calculatorsimulator.data.model.Simulation"
+                app:nullable="true"/>
+
+    </fragment>
 
 </navigation>
